--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Sora');
+
+
+  *{
+    font-family: 'Sora', sans-serif ;
+  }
 .navbar-brand img{
     width: 50px;
 }
