--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,3 +26,17 @@
     background-color: #218838; 
     color: #fff;/* Cor verde mais escura no hover */
   }
+
+  .intensidade{
+    right: 0%;
+    position: relative;
+    margin-left: 64%;
+
+
+  }
+  .intensidade p{
+    right: 0%;
+    font-size: 0.8em;
+    position: relative;
+    margin-bottom: -2%;
+  }
